--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
+    "react-fontawesome": "^1.6.1",
     "react-scripts": "1.1.4",
     "reactstrap": "^6.3.0"
   },
