--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "bootstrap": "^4.1.2",
+    "firebase": "^5.3.0",
     "i": "^0.3.6",
     "npm": "^6.2.0",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-fontawesome": "^1.6.1",
+    "react-responsive": "^5.0.0",
     "react-scripts": "1.1.4",
     "reactstrap": "^6.3.0"
   },
