--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-fontawesome": "^1.6.1",
+    "react-redux": "^5.0.7",
     "react-responsive": "^5.0.0",
     "react-scripts": "1.1.4",
-    "reactstrap": "^6.3.0"
+    "react-spinkit": "^3.0.0",
+    "reactstrap": "^6.3.0",
+    "redux": "^4.0.0",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
