--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "bootstrap": "^4.1.2",
+    "email-validator": "^2.0.4",
     "firebase": "^5.3.0",
     "i": "^0.3.6",
-    "npm": "^6.2.0",
+    "npm": "^6.3.0",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
