--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react-preload-image": "^1.0.4",
     "react-redux": "^5.0.7",
     "react-responsive": "^5.0.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.4",
     "react-spinkit": "^3.0.0",
     "reactstrap": "^6.3.0",
