--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
+    "@turf/random": "^4.1.0",
     "bootstrap": "^4.1.2",
     "email-validator": "^2.0.4",
     "firebase": "^5.3.0",
+    "google-map-react": "^1.0.6",
     "i": "^0.3.6",
+    "immutable": "^3.8.1",
+    "leaflet": "^1.3.3",
     "npm": "^6.3.0",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-fontawesome": "^1.6.1",
+    "react-leaflet": "^2.0.0",
     "react-preload-image": "^1.0.4",
     "react-redux": "^5.0.7",
     "react-responsive": "^5.0.0",
