--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "i": "^0.3.6",
     "immutable": "^3.8.1",
     "leaflet": "^1.3.3",
+    "lodash": "^4.17.10",
     "npm": "^6.3.0",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-fontawesome": "^1.6.1",
     "react-leaflet": "^2.0.0",
+    "react-map-gl": "^3.3.4",
     "react-preload-image": "^1.0.4",
     "react-redux": "^5.0.7",
     "react-responsive": "^5.0.0",
@@ -31,7 +33,8 @@
     "reactstrap": "^6.3.0",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.82.2"
   },
   "scripts": {
     "start": "react-scripts start",
