--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-fontawesome": "^1.6.1",
+    "react-icons": "^3.0.5",
     "react-leaflet": "^2.0.0",
     "react-map-gl": "^3.3.4",
     "react-preload-image": "^1.0.4",
