--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "npm": "^6.4.0",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
+    "react-coverflow": "^0.2.14",
     "react-dom": "^16.4.1",
     "react-fontawesome": "^1.6.1",
     "react-icons": "^3.0.5",
@@ -26,6 +27,7 @@
     "react-preload-image": "^1.0.4",
     "react-redux": "^5.0.7",
     "react-responsive": "^5.0.0",
+    "react-responsive-carousel": "^3.1.41",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
