--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^3.0.5",
     "react-leaflet": "^2.0.0",
     "react-map-gl": "^3.3.4",
+    "react-player": "^1.6.4",
     "react-preload-image": "^1.0.4",
     "react-redux": "^5.0.7",
     "react-responsive": "^5.0.0",
@@ -32,12 +33,16 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.4",
+    "react-scrollbar": "^0.5.4",
+    "react-scrollbars": "0.0.5",
     "react-spinkit": "^3.0.0",
+    "react-video-cover": "^1.2.0",
     "reactstrap": "^6.3.0",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.82.2"
+    "semantic-ui-react": "^0.82.2",
+    "video-react": "^0.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
