--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "email-validator": "^2.0.4",
     "firebase": "^5.3.0",
     "google-map-react": "^1.0.6",
+    "google-maps-react": "^2.0.2",
     "i": "^0.3.6",
     "immutable": "^3.8.1",
     "leaflet": "^1.3.3",
@@ -20,6 +21,7 @@
     "react-bootstrap": "^0.32.1",
     "react-coverflow": "^0.2.14",
     "react-dom": "^16.4.1",
+    "react-fade": "^1.1.1",
     "react-fontawesome": "^1.6.1",
     "react-icons": "^3.0.5",
     "react-leaflet": "^2.0.0",
