--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^3.0.5",
     "react-leaflet": "^2.0.0",
     "react-map-gl": "^3.3.4",
+    "react-on-images-loaded": "^2.1.9",
     "react-player": "^1.6.4",
     "react-preload-image": "^1.0.4",
     "react-redux": "^5.0.7",
@@ -38,6 +39,8 @@
     "react-scrollbar": "^0.5.4",
     "react-scrollbars": "0.0.5",
     "react-spinkit": "^3.0.0",
+    "react-spinner-material": "^1.0.17",
+    "react-spinners": "^0.4.4",
     "react-video-cover": "^1.2.0",
     "reactstrap": "^6.3.0",
     "redux": "^4.0.0",
