--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "immutable": "^3.8.1",
     "leaflet": "^1.3.3",
     "lodash": "^4.17.10",
+    "mapbox-gl": "^0.49.0",
     "npm": "^6.4.0",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
