--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/fontawesome-svg-core": "^1.2.7",
+    "@fortawesome/free-solid-svg-icons": "^5.4.2",
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "@turf/random": "^4.1.0",
     "bootstrap": "^4.1.2",
@@ -17,7 +17,7 @@
     "leaflet": "^1.3.3",
     "lodash": "^4.17.10",
     "mapbox-gl": "^0.49.0",
-    "npm": "^6.4.0",
+    "npm": "^6.4.1",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-coverflow": "^0.2.14",
